# aoc2021

./: .gitignore  README.md
Aoc2021.hsproj/: .uuid
Aoc2021.hsproj/Aoc/: AdventOfCode2021.cabal  Day1.hs  Day2.hs  Day3.hs  File.hs  Main.hs  _Day1.hsplay  _Day2.hsplay  _Day3.hsplay
Aoc2021.hsproj/Day1/: AdventOfCode2021.cabal  Main.hs
