cabal-version: 2.4
name: AdventOfCode2021
version: 1.0
author: Morten Teinum
stability: experimental
homepage: https://github.com/mteinum/aoc2021
category: advent calendar
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
data-files:
    input_day2.txt
    input_day1.txt

executable Aoc
    main-is: Day1.hs
    other-modules:
        Day2
    default-language: Haskell2010
    build-depends:
        base -any,
        split -any
